Lex + preprocess + compile optimization.
Replaced ArrayList usage by a LinkedList. This has the following effect:
- get() goes from O(1) to O(n) unless an iterator is used, in which case it remains O(1).
- remove() in an iterator over the list goes from O(n) to O(1).
This commit also changes all iterations over the list to iterations using an iterator, making both get() and remove() O(1).